syntax="proto3";
import "Header/header.proto";

// Temperature message to describe current temperatures reported by a sensor.
message Temperature
{
	
	Header header = 1;

	float temperatureF = 2;
	
}